# ai_exam

./: exam.py  pyproject.toml  requirements.txt  utils.py
configs/: student_01.json  student_02.json  student_03.json  student_04.json  student_05.json  student_06.json  student_07.json  student_08.json  student_09.json  student_10.json
student_03/: data.yaml
student_03/train/labels/: 10169_jpg.rf.15bab4d852513a8b7ff4c9bb4b997f8d.txt  10169_jpg.rf.dcb1d3d0db35b84c8ff5099f1d9ba82b.txt  10169_jpg.rf.ef9f9808265b22b52f6ee9227a56f5ae.txt  1063_jpg.rf.5bf2f29248e4c6c1ffdfcf483d55a82f.txt  1063_jpg.rf.88d4dfdea310d4c935b9888898094661.txt  1063_jpg.rf.c1aa798f96cfb14f3ab8e608d1248daa.txt  10720_jpg.rf.d8fd6ad3865b24a1adffe17fbe8862b2.txt  10862_jpg.rf.0d1365691c76cbe1a1accab9822eccc7.txt  10862_jpg.rf.a82669a0039660ed1f92513059ffc67f.txt  10862_jpg.rf.d015935ec195e2ab2a3b4659612b024d.txt  10880_jpg.rf.3cf3c0e76368dcb2b4809c1e9bdf25b0.txt  10880_jpg.rf.702981b372c26c2feddebbc936c91758.txt  10880_jpg.rf.9bfe66979348270490de959a00c94145.txt  10917_jpg.rf.72cf97fb7e3485cfe3a81486f03666d9.txt  10917_jpg.rf.a174bcfd5f598e58ebedabef4911932f.txt  10917_jpg.rf.f03e043c13e0ae923a52515dc74032c5.txt  11075_jpg.rf.3960b756859db92b291153672fa1ef9f.txt  11075_jpg.rf.a02fc114d4d6cfbffb987582ba72c0d4.txt  11075_jpg.rf.a3e03e2bd53602bcd7ad8f13c502a559.txt  11275_jpg.rf.5eb9fb525bde27142e7c2aeb816e8b8b.txt  11275_jpg.rf.b280ceb85e8e88cbabc49983940d63f5.txt  11275_jpg.rf.e4a6c9be05917ac2597f0791f94c57a6.txt  11346_jpg.rf.33bfa30f4d5e068bea1705eefb530811.txt  (+1153 more)
(+44 files in other folders)
