[tool.poetry]
name = "exam"
version = "0.1.0"
description = "Шаблон экзамена по обучению модели на PyTorch для bbox-регрессии"
authors = ["Диц Даниил"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
pillow = "^11.2.1"
matplotlib = "^3.10.3"
opencv-python = "^4.11.0.86"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
